--- a/screen.html
+++ b/screen.html
@@ -17,9 +17,26 @@ html, body { margin:0; height:100%; overflow:hidden; font-family:sans-serif; bac
   position:absolute; top:0; left:0; width:100%; height:100%; 
   border:none; display:none; z-index:1; 
 }
-#title { display:none; } /* Ẩn tên và kênh */
-#statusText { display:none; } /* Ẩn trạng thái */
-#songCount { display:none; } /* Ẩn số bài */
+#title { 
+  position:absolute; bottom:20px; left:0; width:100%; font-weight:bold; font-size:28px; color:#fff; white-space:nowrap; overflow:hidden; text-shadow:0 0 15px #000; display:none; z-index:2;
+}
+#title span { display:inline-block; padding-left:100%; animation: scrollText 15s linear infinite; }
+@keyframes scrollText { 0%{transform:translateX(0%);} 100%{transform:translateX(-100%);} }
+#statusText {  
+  position:absolute;
+  top:50%;
+  left:10px;
+  transform:translateY(-50%);
+  background:rgba(0,0,0,0.5);
+  color:#fff;
+  padding:10px 15px;
+  border-radius:8px;
+  font-size:24px;
+  font-weight:bold;
+  opacity:0;
+  transition:opacity 1s ease;
+  z-index:4;
+}
 #connectionStatus { position:absolute; top:10px; left:10px; font-size:28px; font-weight:bold; text-shadow:0 0 8px #000; z-index:3; }
 .connected { color:#0f0; }
 .disconnected { color:#ff3b3f; }
@@ -30,6 +47,8 @@ html, body { margin:0; height:100%; overflow:hidden; font-family:sans-serif; bac
 <div id="connectionStatus">Room ID: ——— (Chưa kết nối)</div>
 <div id="background"></div>
 <iframe id="player" allowfullscreen allow="autoplay" allow="autoplay; encrypted-media"></iframe>
+<div id="title"><span></span></div>
+<div id="statusText"></div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
@@ -55,11 +74,22 @@ const resetRef = ref(db,"resetScreen");
 const playerIframe = document.getElementById("player");
 const background = document.getElementById("background");
 const connectionStatusEl = document.getElementById("connectionStatus");
+const titleEl = document.getElementById("title");
+const titleSpan = titleEl.querySelector("span");
+const statusTextEl = document.getElementById("statusText");
 
 let currentVideoId = null;
 let roomId = localStorage.getItem("roomId") || Math.floor(100000 + Math.random()*900000).toString();
 localStorage.setItem("roomId", roomId);
 set(connectionRef,{connected:false, roomId});
+
+let fadeTimeout = null;
+function showStatusText(msg){
+  if(fadeTimeout) clearTimeout(fadeTimeout);
+  statusTextEl.textContent = msg;
+  statusTextEl.style.opacity = 1;
+  fadeTimeout = setTimeout(()=>{ statusTextEl.style.opacity = 0; },4000);
+}
 
 // Reset screen hoàn toàn
 let resetHandled=false;
@@ -67,16 +97,13 @@ onValue(resetRef,snapshot=>{
   if(snapshot.val()===true && !resetHandled){
     resetHandled=true;
 
-    // Ẩn iframe, hiện background, xóa video
     currentVideoId = null;
     playerIframe.src = '';
     playerIframe.style.display='none';
+    titleEl.style.display='none';
     background.style.display='block';
 
-    // Reset Firebase về false
     set(resetRef,false);
-
-    // Cho phép reset tiếp theo
     setTimeout(()=>{ resetHandled=false; }, 500);
   }
 });
@@ -88,10 +115,19 @@ onValue(commandRef,snapshot=>{
   if(cmd.roomId === roomId){
     if(cmd.id && cmd.id !== currentVideoId){
       currentVideoId = cmd.id;
-      // Phát video, tắt controls, loại bỏ màn hình kết thúc
       playerIframe.src = `https://www.youtube.com/embed/${cmd.id}?autoplay=1&controls=0&rel=0&modestbranding=1&fs=0&disablekb=1&iv_load_policy=3`;
       playerIframe.style.display='block';
       background.style.display='none';
+      titleEl.style.display='block';
+      titleSpan.textContent = `🎵 Đang phát: ${cmd.title}`;
+    }
+    if(cmd.mute!==undefined){
+      playerIframe.contentWindow.postMessage(`{"event":"command","func":"${cmd.mute? "mute":"unMute"}","args":""}`,'*');
+      showStatusText(cmd.mute ? "🔇 Tắt tiếng" : "🔊 Bật tiếng");
+    }
+    if(cmd.volume!==undefined){
+      playerIframe.contentWindow.postMessage(`{"event":"command","func":"setVolume","args":[${cmd.volume}]}`,'*');
+      showStatusText(`🔊 Âm lượng: ${cmd.volume}`);
     }
     set(connectionRef,{connected:true, roomId});
   }
@@ -122,8 +158,8 @@ function onYouTubeIframeAPIReady(){
       'onReady':()=>{},
       'onStateChange': e=>{
         if(e.data===YT.PlayerState.ENDED){
-          // Khi kết thúc video → hiện background, không hiện màn hình kết thúc
           playerIframe.style.display='none';
+          titleEl.style.display='none';
           background.style.display='block';
         }
       }
